tests/js/harness.core
let realm = GLOBAL_context.Realm
let varNames = realm.GlobalEnv.EnvironmentRecord.VarNames
let map = realm.GlobalObject.SubMap
assert (contains varNames "assert")
assert (contains varNames "Test262Error")
assert (contains varNames "$DONOTEVALUATE")
assert (contains varNames "$ERROR")
assert (= map.x0.Value 1)
